# freebsd-ports-kde

./: GIDs  JENKINS  MOVED  UIDs  UPDATING  pyqt6100.diff
Mk/: bsd.default-versions.mk  bsd.qt.mk
Mk/Uses/: cmake.mk  kde.mk  pyqt.mk  qmake.mk  qt-dist.mk  qt.mk  qt_BACKUP_40618.mk
Tools/scripts/: cleanup_categories.rb
accessibility/: Makefile
accessibility/jovie/: Makefile  distinfo  pkg-plist
accessibility/kaccessible/: Makefile  distinfo
accessibility/kdeaccessibility/: Makefile
accessibility/kdeaccessibility-kde4/: Makefile
accessibility/kmag/: Makefile  distinfo  pkg-plist
accessibility/kmousetool/: Makefile  distinfo  pkg-plist
accessibility/kmouth/: Makefile  distinfo  pkg-plist
accessibility/qt5-speech/: Makefile  pkg-plist
accessibility/qt6-speech/: distinfo  pkg-plist
arabic/: Makefile
arabic/kde-l10n/: Makefile  pkg-plist
arabic/libreoffice/: Makefile
archivers/: Makefile
archivers/ark/: Makefile  distinfo  pkg-plist
archivers/kf5-karchive/: Makefile
archivers/kf6-karchive/: distinfo
archivers/peazip/: Makefile
archivers/quazip/: Makefile
astro/: Makefile
astro/gpsprune/: Makefile
astro/josm/: Makefile
astro/kosmindoormap/: Makefile  distinfo  pkg-plist
astro/kstars/: Makefile  distinfo  pkg-plist
astro/kstars-kde4/: Makefile
astro/libkgeomap/: Makefile  distinfo  pkg-plist
astro/libkgeomap-kde4/: Makefile  distinfo  distinfo~HEAD
astro/marble/: Makefile  distinfo  pkg-plist
astro/osmosis/: Makefile
astro/stellarsolver/: Makefile  distinfo
astro/traccar/: Makefile  distinfo  pkg-plist
audio/: Makefile
audio/amarok/: Makefile  distinfo  pkg-plist
audio/amarok-kde4/: Makefile
audio/ardour/: Makefile
audio/audiocd-kio/: Makefile  distinfo  pkg-plist
audio/baresip/: Makefile  Makefile.depends
audio/cantata/: Makefile
audio/creox/: Makefile
audio/elisa/: Makefile  distinfo  pkg-descr  pkg-plist
audio/ft2-clone/: Makefile  distinfo
audio/gnome-metronome/: Makefile
audio/juk/: Makefile  distinfo  pkg-plist
audio/kid3-kde4/: Makefile
audio/kmix/: Makefile  distinfo  pkg-plist
audio/kscd/: Makefile  distinfo
audio/kwave/: Makefile  distinfo  pkg-plist
audio/libkcddb/: Makefile  distinfo  pkg-plist
audio/libkcddb-kde4/: Makefile  distinfo  pkg-plist
audio/libkcompactdisc/: Makefile  distinfo
audio/libkcompactdisc-kde4/: Makefile  distinfo  pkg-plist
audio/musiccontrol/: Makefile
audio/plasma5-kpipewire/: pkg-plist
audio/plasma5-plasma-pa/: Makefile  distinfo  pkg-descr  pkg-plist
audio/plasma6-kpipewire/: distinfo  pkg-plist
audio/plasma6-ocean-sound-theme/: distinfo
audio/plasma6-oxygen-sounds/: distinfo
audio/plasma6-plasma-pa/: distinfo  pkg-plist
audio/pulseaudio-qt/: Makefile  distinfo  pkg-descr  pkg-plist
audio/simon/: Makefile
audio/simon-kde4/: Makefile
audio/soundkonverter/: Makefile
audio/subtui/: Makefile  distinfo
audio/taglib/: Makefile
audio/taglib-extras/: Makefile
benchmarks/fio/: Makefile
biology/gkl/: Makefile
cad/astk-client/: Makefile
cad/astk-serveur/: Makefile
cad/cura/: Makefile
cad/electric-ng/: Makefile
cad/elmerfem/: Makefile
chinese/: Makefile
comms/: Makefile
databases/: Makefile
deskutils/: Makefile
devel/: Makefile
editors/: Makefile
emulators/: Makefile
french/: Makefile
games/: Makefile
german/: Makefile
graphics/: Makefile
hebrew/: Makefile
hungarian/: Makefile
japanese/: Makefile
korean/: Makefile
lang/: Makefile
math/: Makefile
misc/: Makefile
multimedia/: Makefile
net/: Makefile
net-im/: Makefile
net-p2p/: Makefile
polish/: Makefile
portuguese/: Makefile
print/: Makefile
russian/: Makefile
science/: Makefile
security/: Makefile
sysutils/: Makefile
textproc/: Makefile
ukrainian/: Makefile
vietnamese/: Makefile
www/: Makefile
www/qt5-webengine/files/: freebsd.pri  patch-build_toolchain_gcc__toolchain.gni  patch-clang  patch-config.tests-enable-on-FreeBSD  patch-configure.pri  patch-git_a96b5c  patch-mkspecs_features_functions.prf  patch-src_3rdparty_chromium_BUILD.gn  patch-src_3rdparty_chromium_base_BUILD.gn  patch-src_3rdparty_chromium_base_allocator_allocator__shim__unittest.cc  patch-src_3rdparty_chromium_base_base__paths.h  patch-src_3rdparty_chromium_base_base__paths__posix.cc  patch-src_3rdparty_chromium_base_files_file__path__unittest.cc  patch-src_3rdparty_chromium_base_files_file__path__watcher__kqueue.h  patch-src_3rdparty_chromium_base_files_file__util.h  patch-src_3rdparty_chromium_base_i18n_icu__util.cc  patch-src_3rdparty_chromium_base_logging__unittest.cc  patch-src_3rdparty_chromium_base_native__library__unittest.cc  patch-src_3rdparty_chromium_base_posix_unix__domain__socket.cc  patch-src_3rdparty_chromium_base_process_memory.h  patch-src_3rdparty_chromium_base_process_memory__stubs.cc  patch-src_3rdparty_chromium_base_process_process__info__linux.cc  patch-src_3rdparty_chromium_base_process_process__iterator__freebsd.cc  patch-src_3rdparty_chromium_base_process_process__metrics__posix.cc  patch-src_3rdparty_chromium_base_process_process__posix.cc  patch-src_3rdparty_chromium_base_sys__info.h  patch-src_3rdparty_chromium_base_sys__info__freebsd.cc  patch-src_3rdparty_chromium_base_test_BUILD.gn  patch-src_3rdparty_chromium_base_third__party_libevent_BUILD.gn  patch-src_3rdparty_chromium_base_threading_platform__thread__linux.cc  patch-src_3rdparty_chromium_base_trace__event_trace__log.cc  patch-src_3rdparty_chromium_breakpad_BUILD.gn  patch-src_3rdparty_chromium_build_config_BUILD.gn  patch-src_3rdparty_chromium_build_config_BUILDCONFIG.gn  patch-src_3rdparty_chromium_build_config_clang_BUILD.gn  patch-src_3rdparty_chromium_build_config_compiler_BUILD.gn  patch-src_3rdparty_chromium_build_config_crypto.gni  patch-src_3rdparty_chromium_build_config_features.gni  patch-src_3rdparty_chromium_build_config_linux_gtk2_BUILD.gn  patch-src_3rdparty_chromium_build_config_linux_gtk3_BUILD.gn  (+198 more)
x11/: Makefile
x11-clocks/: Makefile
x11-fm/: Makefile
x11-themes/: Makefile
x11-toolkits/: Makefile
x11-wm/: Makefile
(+2950 files in other folders)
