--- src/3rdparty/chromium/base/test/BUILD.gn.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/base/test/BUILD.gn
@@ -202,7 +202,7 @@ static_library("test_support") {
     deps += [ "//third_party/fuchsia-sdk:zx" ]
   }
 
-  if (is_linux) {
+  if (is_linux || is_bsd) {
     public_deps += [ ":fontconfig_util_linux" ]
     data_deps = [
       "//third_party/test_fonts",
@@ -347,7 +347,7 @@ static_library("run_all_base_unittests") {
   ]
 }
 
-if (is_linux) {
+if (is_linux || is_bsd) {
   source_set("fontconfig_util_linux") {
     sources = [
       "fontconfig_util_linux.cc",
