--- src/3rdparty/chromium/third_party/breakpad/BUILD.gn.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/third_party/breakpad/BUILD.gn
@@ -461,7 +461,7 @@ if (is_mac) {
   }
 }
 
-if (is_linux || is_android) {
+if (is_linux || is_bsd || is_android) {
   if (current_toolchain == host_toolchain) {
     executable("symupload") {
       sources = [
