--- src/3rdparty/chromium/build/config/clang/BUILD.gn.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/build/config/clang/BUILD.gn
@@ -50,7 +50,7 @@ config("find_bad_constructs") {
       "check-enum-max-value",
     ]
 
-    if (is_linux || is_android || is_fuchsia) {
+    if (is_linux || is_bsd || is_android || is_fuchsia) {
       cflags += [
         "-Xclang",
         "-plugin-arg-find-bad-constructs",
