--- src/3rdparty/chromium/build/config/features.gni.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/build/config/features.gni
@@ -48,9 +48,9 @@ declare_args() {
   # libudev usage. This currently only affects the content layer.
   use_udev = is_linux && !is_chromecast
 
-  use_dbus = is_linux && !is_chromecast
+  use_dbus = (is_linux || is_bsd) && !is_chromecast
 
-  use_gio = is_linux && !is_chromeos && !is_chromecast
+  use_gio = (is_linux || is_bsd) && !is_chromeos && !is_chromecast
 
   use_qt = false
 }
