--- src/3rdparty/chromium/build/config/linux/gtk3/BUILD.gn.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/build/config/linux/gtk3/BUILD.gn
@@ -4,7 +4,7 @@
 
 import("//build/config/linux/pkg_config.gni")
 
-assert(is_linux, "This file should only be referenced on Linux")
+assert(is_linux || is_bsd, "This file should only be referenced on Linux")
 assert(use_gtk, "This file should only be referenced when using GTK")
 
 # Depend on //build/config/linux/gtk3 to use GTKv3. Depend on
