--- src/3rdparty/chromium/build/config/sanitizers/BUILD.gn.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/build/config/sanitizers/BUILD.gn
@@ -408,7 +408,7 @@ config("lsan_flags") {
 
 config("msan_flags") {
   if (is_msan) {
-    assert(is_linux, "msan only supported on linux x86_64")
+    assert(is_linux || is_bsd, "msan only supported on linux x86_64")
     if (!defined(msan_blacklist_path)) {
       msan_blacklist_path =
           rebase_path("//tools/msan/blacklist.txt", root_build_dir)
@@ -423,7 +423,7 @@ config("msan_flags") {
 
 config("tsan_flags") {
   if (is_tsan) {
-    assert(is_linux, "tsan only supported on linux x86_64")
+    assert(is_linux || is_bsd, "tsan only supported on linux x86_64")
     if (!defined(tsan_blacklist_path)) {
       tsan_blacklist_path =
           rebase_path("//tools/memory/tsan_v2/ignores.txt", root_build_dir)
