--- src/3rdparty/chromium/build/config/ui.gni.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/build/config/ui.gni
@@ -28,15 +28,15 @@ declare_args() {
 
   # Indicates if Aura is enabled. Aura is a low-level windowing library, sort
   # of a replacement for GDI or GTK.
-  use_aura = is_win || is_linux || is_fuchsia
+  use_aura = is_win || is_linux || is_bsd || is_fuchsia
 }
 
 declare_args() {
   # Whether we should use glib, a low level C utility library.
-  use_glib = is_linux && !use_ozone
+  use_glib = (is_linux || is_bsd) && !use_ozone
 
   # Indicates if the UI toolkit depends on X11.
-  use_x11 = is_linux && !use_ozone
+  use_x11 = (is_linux || is_bsd) && !use_ozone
 }
 
 declare_args() {
