--- src/3rdparty/chromium/build/toolchain/linux/BUILD.gn.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/build/toolchain/linux/BUILD.gn
@@ -6,7 +6,9 @@ import("//build/config/sysroot.gni")
 import("//build/toolchain/gcc_toolchain.gni")
 
 clang_toolchain("clang_arm") {
-  toolprefix = "arm-linux-gnueabihf-"
+  if (!is_bsd) {
+    toolprefix = "arm-linux-gnueabihf-"
+  }
   toolchain_args = {
     current_cpu = "arm"
     current_os = "linux"
@@ -14,7 +16,6 @@ clang_toolchain("clang_arm") {
 }
 
 clang_toolchain("clang_arm64") {
-  toolprefix = "aarch64-linux-gnu-"
   toolchain_args = {
     current_cpu = "arm64"
     current_os = "linux"
