--- src/3rdparty/chromium/chrome/BUILD.gn.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/chrome/BUILD.gn
@@ -29,7 +29,7 @@ import("//v8/gni/v8.gni")
 
 if (is_android) {
   import("//build/config/android/rules.gni")
-} else if (is_linux) {
+} else if (is_linux || is_bsd) {
   import("//build/linux/extract_symbols.gni")
 } else if (is_mac) {
   import("//build/compiled_action.gni")
@@ -115,7 +115,7 @@ if (!is_android && !is_mac) {
     if (is_win) {
       public_deps += [ ":reorder_imports" ]
     }
-    if (use_aura && (is_win || is_linux)) {
+    if (use_aura && (is_win || is_linux || is_bsd)) {
       data_deps += [ "//chrome/app:service_manifests" ]
     }
     if (is_chromeos) {
@@ -157,7 +157,7 @@ if (!is_android && !is_mac) {
       deps += [ "//printing/buildflags" ]
 
       data += [ "$root_out_dir/resources.pak" ]
-      if (is_linux || is_win) {
+      if (is_linux || is_win || is_bsd) {
         data += [
           "$root_out_dir/chrome_100_percent.pak",
           "$root_out_dir/locales/en-US.pak",
@@ -240,7 +240,7 @@ if (!is_android && !is_mac) {
         }
       }
 
-      if (is_linux) {
+      if (is_linux || is_bsd) {
         sources += [
           "app/chrome_dll_resource.h",
           "app/chrome_main.cc",
@@ -1825,7 +1825,7 @@ if (enable_resource_whitelist_generation) {
   }
 }
 
-if (is_linux) {
+if (is_linux || is_bsd) {
   if (is_official_build) {
     extract_symbols("linux") {
       binary = "$root_out_dir/chrome"
