--- src/3rdparty/chromium/chrome/BUILD.gn.orig	2019-06-25 18:30:41 UTC
+++ src/3rdparty/chromium/chrome/BUILD.gn
@@ -1834,7 +1834,9 @@ if (enable_resource_whitelist_generation) {
 }
 
 if (is_linux) {
-  if (is_official_build) {
+  #XXX Test
+  if (is_official_build && !is_bsd) {
+#  if (is_official_build) {
     group("linux_symbols") {
       deps = [
         ":chrome_symbols",
