--- src/3rdparty/chromium/chrome/browser/BUILD.gn.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/chrome/browser/BUILD.gn
@@ -3138,7 +3138,7 @@ jumbo_split_static_library("browser") {
     ]
   }
 
-  if (is_linux) {
+  if (is_linux || is_bsd) {
     if (use_aura) {
       deps += [ "//third_party/fontconfig" ]
       if (use_dbus) {
@@ -3149,7 +3149,10 @@ jumbo_split_static_library("browser") {
       configs += [ "//build/config/linux:x11" ]
       deps += [ "//ui/gfx/x" ]
     }
-    deps += [ "//services/service_manager/zygote" ]
+
+    if (is_linux) {
+      deps += [ "//services/service_manager/zygote" ]
+    }
   }
 
   if (is_desktop_linux) {
@@ -3230,7 +3233,7 @@ jumbo_split_static_library("browser") {
     sources += [ "hang_monitor/hang_crash_dump.cc" ]
   }
 
-  if (is_win || is_linux) {
+  if (is_win || is_linux || is_bsd) {
     sources += [
       "renderer_context_menu/spelling_options_submenu_observer.cc",
       "renderer_context_menu/spelling_options_submenu_observer.h",
@@ -3313,14 +3316,14 @@ jumbo_split_static_library("browser") {
     ]
   }
 
-  if (is_win || is_mac || (is_linux && !is_chromeos)) {
+  if (is_win || is_mac || ((is_linux || is_bsd) && !is_chromeos)) {
     sources += [
       "password_manager/password_store_signin_notifier_impl.cc",
       "password_manager/password_store_signin_notifier_impl.h",
     ]
   }
 
-  if (is_win || is_mac || is_linux) {
+  if (is_win || is_mac || is_linux || is_bsd) {
     sources += [
       "payments/chrome_payment_request_delegate.cc",
       "payments/chrome_payment_request_delegate.h",
