--- src/3rdparty/chromium/chrome/browser/extensions/BUILD.gn.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/chrome/browser/extensions/BUILD.gn
@@ -1051,7 +1051,7 @@ jumbo_static_library("extensions") {
     ]
   }
 
-  if (is_linux) {
+  if (is_linux || is_bsd) {
     deps += [ "//third_party/fontconfig" ]
 
     if (use_dbus) {
@@ -1114,7 +1114,7 @@ jumbo_static_library("extensions") {
     ]
   }
 
-  if (is_win || (is_linux && !is_chromeos)) {
+  if (is_win || ((is_linux || is_bsd) && !is_chromeos)) {
     sources += [
       "api/input_ime/input_ime_api.cc",
       "api/input_ime/input_ime_api.h",
