--- src/3rdparty/chromium/chromecast/BUILD.gn.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/chromecast/BUILD.gn
@@ -38,7 +38,7 @@ group("all") {
   if (!is_android) {
     deps += [ ":cast_shell" ]
   }
-  if (is_linux) {
+  if (is_linux || is_bsd) {
     deps += [ "//chromecast/tracing" ]
   }
   if (chromecast_branding != "public") {
@@ -89,14 +89,13 @@ cast_test_group("cast_tests") {
     }
   }
 
-  if (is_linux) {
+  if (is_linux || is_bsd) {
     tests += [
       "//chromecast/crash:cast_crash_unittests",
-      "//sandbox/linux:sandbox_linux_unittests",
     ]
   }
 
-  if (is_linux || is_fuchsia) {
+  if (is_linux || is_bsd || is_fuchsia) {
     tests += [
       "//chromecast/media/cma/backend:cast_audio_backend_unittests",
       "//chromecast/media/cma/backend:cast_av_sync_backend_unittests",
