--- src/3rdparty/chromium/chromecast/browser/BUILD.gn.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/chromecast/browser/BUILD.gn
@@ -187,7 +187,7 @@ cast_source_set("browser") {
     ]
   }
 
-  if (is_linux) {
+  if (is_linux || is_bsd) {
     sources += [
       "cast_memory_pressure_monitor.cc",
       "cast_memory_pressure_monitor.h",
