--- src/3rdparty/chromium/chromecast/browser/metrics/BUILD.gn.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/chromecast/browser/metrics/BUILD.gn
@@ -27,7 +27,7 @@ cast_source_set("metrics") {
     "//content/public/common",
   ]
 
-  if (is_linux) {
+  if (is_linux || is_bsd) {
     sources += [
       "external_metrics.cc",
       "external_metrics.h",
