--- src/3rdparty/chromium/chromecast/crash/BUILD.gn.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/chromecast/crash/BUILD.gn
@@ -7,7 +7,7 @@ import("//testing/test.gni")
 
 # Crash reporting is not support on Fuchsia yet
 # TODO(crbug.com/753619): Enable crash reporting on Fuchsia.
-assert(!is_fuchsia)
+assert(!is_fuchsia || !is_bsd)
 
 cast_source_set("crash") {
   sources = [
@@ -83,7 +83,7 @@ cast_source_set("test_support") {
   ]
 }
 
-if (is_linux) {
+if (is_linux || is_bsd) {
   test("cast_crash_unittests") {
     sources = [
       "cast_crashdump_uploader_unittest.cc",
@@ -106,7 +106,7 @@ if (is_linux) {
       "//components/prefs:test_support",
       "//testing/gmock",
       "//testing/gtest",
-      "//third_party/breakpad:client",
+      #"//third_party/breakpad:client",
     ]
   }
 }
