--- src/3rdparty/chromium/components/BUILD.gn.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/components/BUILD.gn
@@ -196,8 +196,8 @@ test("components_unittests") {
       "//components/certificate_transparency:unit_tests",
       "//components/contextual_search:unit_tests",
       "//components/crash/content/app:unit_tests",
-      "//components/crash/content/browser:unit_tests",
-      "//components/crash/core/common:unit_tests",
+      #"//components/crash/content/browser:unit_tests",
+      #"//components/crash/core/common:unit_tests",
       "//components/data_reduction_proxy/content/browser:unit_tests",
       "//components/data_reduction_proxy/content/renderer:unit_tests",
       "//components/data_reduction_proxy/core/browser:unit_tests",
