--- src/3rdparty/chromium/components/crash/content/browser/BUILD.gn.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/components/crash/content/browser/BUILD.gn
@@ -26,7 +26,7 @@ source_set("browser") {
     "//components/crash/content/app",
     "//content/public/browser",
     "//content/public/common",
-    "//third_party/breakpad:client",
+    #"//third_party/breakpad:client",
   ]
 
   if (is_linux || is_android) {
@@ -46,8 +46,8 @@ source_set("browser") {
   # This is not in the GYP build but this target includes breakpad client
   # headers, so add the dependency here.
   if ((is_posix && !is_ios) || is_fuchsia) {
-    configs += [ "//third_party/breakpad:client_config" ]
-    public_configs = [ "//third_party/breakpad:client_config" ]
+    #configs += [ "//third_party/breakpad:client_config" ]
+    #public_configs = [ "//third_party/breakpad:client_config" ]
   }
 
   if (is_android) {
