--- src/3rdparty/chromium/components/crash/core/common/BUILD.gn.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/components/crash/core/common/BUILD.gn
@@ -6,7 +6,7 @@ import("//build/buildflag_header.gni")
 
 declare_args() {
   # If set to true, this will stub out and disable the entire crash key system.
-  use_crash_key_stubs = is_fuchsia
+  use_crash_key_stubs = is_fuchsia || is_bsd
 }
 
 group("common") {
