--- src/3rdparty/chromium/components/download/BUILD.gn.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/components/download/BUILD.gn
@@ -14,6 +14,10 @@ group("unit_tests") {
       "//components/download/internal/common:unit_tests",
       "//components/download/quarantine:unit_tests",
     ]
+
+    if (is_bsd) {
+      deps -= [ "//components/download/quarantine:unit_tests" ]
+    }
   }
 
   data_deps = [
