--- src/3rdparty/chromium/components/metrics/BUILD.gn.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/components/metrics/BUILD.gn
@@ -139,6 +139,12 @@ static_library("metrics") {
     libs = [ "wevtapi.lib" ]
   }
 
+  if (is_bsd) {
+    sources -= [
+      "system_memory_stats_recorder_linux.cc"
+    ]
+  }
+
   if (is_fuchsia) {
     sources += [ "drive_metrics_provider_fuchsia.cc" ]
   }
@@ -312,7 +318,7 @@ static_library("test_support") {
   ]
 }
 
-if (is_linux) {
+if (is_linux || is_bsd) {
   static_library("serialization") {
     sources = [
       "serialization/metric_sample.cc",
@@ -384,7 +390,7 @@ source_set("unit_tests") {
     "//ui/gfx/geometry",
   ]
 
-  if (is_linux) {
+  if (is_linux || is_bsd) {
     sources += [ "serialization/serialization_utils_unittest.cc" ]
     deps += [ ":serialization" ]
   }
