--- src/3rdparty/chromium/components/policy/BUILD.gn.orig	2018-11-13 18:25:11 UTC
+++ src/3rdparty/chromium/components/policy/BUILD.gn
@@ -16,6 +16,7 @@ assert(!is_ios, "Policy should not be referenced on iO
 gen_policy_templates_common = true
 gen_policy_templates_win = is_win
 gen_policy_templates_linux = is_linux
+gen_policy_templates_bsd = is_bsd
 gen_policy_templates_android = is_android
 gen_policy_templates_mac = is_mac
 gen_policy_templates_chromeos = is_chromeos
@@ -205,7 +206,7 @@ action("policy_templates") {
       rebase_path(policy_templates_android_policy_path, root_build_dir),
     ]
   }
-  if (gen_policy_templates_linux) {
+  if (gen_policy_templates_linux || gen_policy_templates_bsd) {
     outputs += policy_templates_linux_outputs
     args += [
       "--json",
