--- src/3rdparty/chromium/components/url_formatter/top_domains/BUILD.gn.orig	2019-05-23 12:39:34 UTC
+++ src/3rdparty/chromium/components/url_formatter/top_domains/BUILD.gn
@@ -33,6 +33,8 @@ executable("top_domain_generator") {
   if (is_ios) {
     libs = [ "UIKit.framework" ]
   }
+
+  libs = [ "pthread", "execinfo", "kvm" ] # XXX
 }
 
 compiled_action("generate_top_domains_trie") {
